--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -122,6 +122,8 @@
     <ClInclude Include="FileConverter.h" />
     <ClInclude Include="IClientHandlerFactory.h" />
     <ClInclude Include="Packet.h" />
+    <ClInclude Include="Settings.h" />
+    <ClInclude Include="SettingsHandler.h" />
     <ClInclude Include="Song.h" />
     <ClInclude Include="ConcurrentQueue.h" />
     <ClInclude Include="InputHandler.h" />
@@ -136,6 +138,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ServerManager.cpp" />
     <ClCompile Include="ServerSocket.cpp" />
+    <ClCompile Include="SettingsHandler.cpp" />
     <ClCompile Include="ThreadPool.h" />
     <ClCompile Include="WavFilePackager.cpp" />
   </ItemGroup>
